fix(campaign): fix missing view link button on tablet

--- a/src/views/CampaignDetail/InfoHeader/styles.module.css
+++ b/src/views/CampaignDetail/InfoHeader/styles.module.css
@@ -57,7 +57,7 @@
   & .viewMore {
     display: none;
 
-    @media (--md-up) {
+    @media (--sm-up) {
       display: inline;
     }
   }
